--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node core/server.js"
+    "start": "node core/server.js",
+    "nodemon": "nodemon core/server"
   },
   "author": "UP805988",
   "license": "ISC",
